--- a/Assignments/Assignment-3/medal_pie_chart.ipynb
+++ b/Assignments/Assignment-3/medal_pie_chart.ipynb
@@ -16,8 +16,8 @@
     "\n",
     "pyp.title('2012 Olympic Gold Medals (100600999)')\n",
     "# Data to plot\n",
-    "labels = 'USA', 'CHN', 'GBR', 'RUS', 'KOR', 'GER', 'FRA', 'ITAL', 'HUN', 'OTHER', 'AUS'\n",
-    "sizes = [46, 38, 29, 24, 13, 11, 11, 8, 8, 107, 7]\n",
+    "countries = 'USA', 'CHN', 'GBR', 'RUS', 'KOR', 'GER', 'FRA', 'ITAL', 'HUN', 'OTHER', 'AUS'\n",
+    "medals = [46, 38, 29, 24, 13, 11, 11, 8, 8, 107, 7]\n",
     "colors = ['blue', 'yellow', 'magenta', 'cyan', 'red', 'purple', 'lightskyblue', 'green', 'yellowgreen', 'lightcoral', 'white']\n",
     "explode = (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)\n",
     "\n",
