--- a/Assignments/Assignment-3/medal_pie_chart.ipynb
+++ b/Assignments/Assignment-3/medal_pie_chart.ipynb
@@ -21,13 +21,13 @@
     "colors = ['blue', 'yellow', 'magenta', 'cyan', 'red', 'purple', 'lightskyblue', 'green', 'yellowgreen', 'lightcoral', 'white']\n",
     "explode = (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)\n",
     "\n",
-    "pyp.pie(sizes, colors=colors, shadow=True)\n",
+    "pyp.pie(medals, colors=colors, shadow=True)\n",
     "pyp.axis('equal')\n",
     "pyp.legend(labels, loc=(-0.05, 0.05), shadow=True)\n",
     "\n",
     " \n",
     "# Plot\n",
-    "pyp.pie(sizes, explode=explode, labels=labels, colors=colors,\n",
+    "pyp.pie(medals, explode=explode, countries=countries, colors=colors,\n",
     "        autopct='%1.1f%%', shadow=True, startangle=140)\n",
     " \n",
     "pyp.axis('equal')\n",
