--- a/Assignments/Assignment-3/medal_pie_chart.ipynb
+++ b/Assignments/Assignment-3/medal_pie_chart.ipynb
@@ -2,11 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "pie() got an unexpected keyword argument 'countries'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-3ce92417e132>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;31m# Plot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m pyp.pie(medals, explode=explode, countries=countries, colors=colors,\n\u001b[1;32m---> 21\u001b[1;33m         autopct='%1.1f%%', shadow=True, startangle=140)\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[0mpyp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'equal'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: pie() got an unexpected keyword argument 'countries'"
+     ]
+    }
+   ],
    "source": [
     "#Venujan Satchithanantham\n",
     "#10060099\n",
@@ -16,7 +28,7 @@
     "\n",
     "pyp.title('2012 Olympic Gold Medals (100600999)')\n",
     "# Data to plot\n",
-    "countries = 'USA', 'CHN', 'GBR', 'RUS', 'KOR', 'GER', 'FRA', 'ITAL', 'HUN', 'OTHER', 'AUS'\n",
+    "labels = 'USA', 'CHN', 'GBR', 'RUS', 'KOR', 'GER', 'FRA', 'ITAL', 'HUN', 'OTHER', 'AUS'\n",
     "medals = [46, 38, 29, 24, 13, 11, 11, 8, 8, 107, 7]\n",
     "colors = ['blue', 'yellow', 'magenta', 'cyan', 'red', 'purple', 'lightskyblue', 'green', 'yellowgreen', 'lightcoral', 'white']\n",
     "explode = (0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)\n",
@@ -27,7 +39,7 @@
     "\n",
     " \n",
     "# Plot\n",
-    "pyp.pie(medals, explode=explode, countries=countries, colors=colors,\n",
+    "pyp.pie(medals, explode=explode, labels=labels, colors=colors,\n",
     "        autopct='%1.1f%%', shadow=True, startangle=140)\n",
     " \n",
     "pyp.axis('equal')\n",
