Committing Question 2 - as much as possible

--- a/Assignments/Assignment-4/cfr_map.ipynb
+++ b/Assignments/Assignment-4/cfr_map.ipynb
@@ -29,7 +29,7 @@
     "from mpl_toolkits.basemap import Basemap\n",
     "import csv\n",
     "\n",
-    "#Aquiring Data from CSV file\n",
+    "#Getting Data from abridged CSV file\n",
     "np.cat = []\n",
     "np.lat = []\n",
     "np.long = []\n",
@@ -48,7 +48,7 @@
     "earth.drawcoastlines(color='0.50', linewidth=0.25)\n",
     "earth.fillcontinents(color='0.95')\n",
     "\n",
-    "##Plot for Measles\n",
+    "##Plot for Measles Map\n",
     "for i in range (len(np.cat)):\n",
     "    if (np.cat[i] == 'Measles'):\n",
     "        x, y = earth(np.long[i], np.lat[i])\n",
@@ -60,7 +60,7 @@
     "            earth.plot(x, y, 'ro',markersize=((np.cases[i])/13500)*9,alpha=.5)\n",
     "\n",
     "    \n",
-    "plt.title(\"Measles outbreaks (100600999)\")\n",
+    "plt.title(\"Measles Outbreaks (100600999)\")\n",
     "plt.show()\n",
     "\n",
     "fig = plt.figure(figsize=(14,10))\n",
@@ -77,7 +77,7 @@
     "        else: \n",
     "            earth.plot(x, y, 'mo',markersize=((np.cases[i])/4000)*5,alpha=.5)\n",
     "    \n",
-    "plt.title(\"Rubella outbreaks (100600999)\")\n",
+    "plt.title(\"Rubella Outbreaks (100600999)\")\n",
     "plt.show"
    ]
   },
