Final Exam: committing question 4

--- a/Final-Exam/fib_file.ipynb
+++ b/Final-Exam/fib_file.ipynb
@@ -2,6 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-13-130b9e10036b>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-13-130b9e10036b>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    help assert\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fib_file(n):\n",
+    "    r = 0\n",
+    "    for k in range(1, n+1):\n",
+    "        r += f**n + f**n-1\n",
+    "    return r\n",
+    "\n",
+    "print(fib_file(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
