Final exam: completed sunspots.m (as much as possible)

--- a/Final-Exam/sunspots.ipynb
+++ b/Final-Exam/sunspots.ipynb
@@ -2,14 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYgAAAEZCAYAAACNebLAAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGpxJREFUeJzt3XuUJnV95/H3ZyRoDBcZrwjCikpYjYMxBjFhYweNDt7I\nMZsIZNG4JnJiMG6yrmhOCHM8HpFNTmKMmkhkMSRRvJAoJBLHuLQXAoJGLsptuIR7YLkp4CXj8N0/\nqoZ5aKp76mm6nqe7eb/OeU4/VfV7qr7Pb6br279LVaWqkCRprjXTDkCStDyZICRJnUwQkqROJghJ\nUicThCSpkwlCktTJBCFJ6mSC0JJJ8pQk30mSJdjXyUneuRRxaWn/bfTwYYLQ2JL8W5Lvtiecu9uf\nT6qq66tqlxr46sskr0vyw/a4D4hhyOMuRpKfSfKFNr47k3w6yY9P4LjXJDl46/LQ/zZJ3pLk6iT3\nJPlWkqcPcRxNlglCi1HAy9sTzs7tz3+fcAz/0h53mjEsKMkLgM8Bfw/sDjwVuBg4O8le04xtKSX5\ndeD1wCFVtRPwCuC26UalpWCC0GI9qKsiyd5J7kuypl0+K8k7k3yl/Qv6n5KsHSn/iSQ3t39ZzyZ5\n5kMOKtknye1JntMuPznJrUl+rl3+tSSXtPFcmeSNI599YZLrk/yvJLckuTHJoUkOSXJ5ktuSvGOM\ncE4APlJV76+qe6vqrqo6FjgPOK495uuSfHnOd7gvyT7t+x2T/FGSa9u6+mCSR7bbHpvkjLb+bk/y\nxXb9KcBewBnt93xrx7/N7kk+037uivYkv/X4xyX5eJK/aj9/cZLnzlPfAf4A+J2quhygqq6pqrvG\nqCctUyYILbW5XRiHA68DHg88EnjryLbPAk8DngD8K/C3D/ngVVcDbwP+JsmPAicDJ1fVl9oitwAv\nq6pdaP7q/ZOtyaT1JGBH4Mk0J/G/BH4V+Eng54Bjk+wNkORnk9zRFUd77J8BPtWx+RPAS0bDnvs1\nRt6fADwdWNf+3IPmhAzwP4HrgcfS1OHvtXXwWuA64BVty+qPOvb78bbMk4BfBt6dZGZk+yuBjwK7\nAmcAH+j6nsCe7evZSa5LclWSDfOU1QpjgtBifTrJHe3r7xYod3JVXVVVP6A5Md5/Mq6qj1TVd6tq\nM/BOYP8kO/c8/gtGjn9nkk0j+z0JuBL4KvBE4PdHtp1ZVf/Wvv8ysBH4LyP7/Q/g3VW1BTgVeBzw\n3jbOS4BLgP3bz59dVWvptpbm9+vmjm030yTM+Yy2zn6D5q/zb1fVvcB7aJIuwGbarquq2lJVZy+w\nn20rk6cALwCOqarNVXUh8GHgtSPFvlJVn2vHLP6aJkF12bP9+QvAs4CDgcOTvGGB76cVwgShxTq0\nqta2r1cvUG50XOC7wE4ASdYkeU/bzXMXcA3NX7iP63n8c0aOv1tVPWPO9g/TnLD+rE1AtMc9JMk5\nbdfKncAhc455+8hA7vfan7eObP/e1u+wHXcC99GcwOfanR599EkeDzwa+PrWZAicSdNiAPhD4Cpg\nY1uPx/SIa+vx76iq746su5amdbLV3H+3R23tnppjax2dUFV3V9W1wIeAl/WMRcuYCUKL9VCnS/4q\nTTfGwVX1GOA/tftciimyPwa8FzgJ2JDkMe36HWm6fP438Piq2o3mhLvkUz/bk+85NN03c/0KcFb7\n/l6aJLA19tGZWLfRnJyfNZIMH1NVu7bHuKeq3lpVTwNeBfxukp/fGsIC4d0ErG3raau9gBv7f8P7\nXU7T6hrlMwRWCROEllrfk+1OwA+AO9sT1fGMd2JZ6DjvA86rqjfSjHN8qF2/Y/u6raruS3IIDxwL\nWGpvB16X5OgkOyXZLcm7gIOAd7dlLgSelWRdO/h8HG09tC2ZvwTe27YmSLJHkpe071+e5Gntfu4G\nfghsaZdvAfaZE0/a/d4A/AtwfJJHJlkHvIGmK2k+nfVdVd+j6Yp7W/sd9wTeSDNuoRVu0ASR5KR2\nNshFC5R5X5JNSS6YM1io5WuhE3nN836uU2gGSW8EvklzwhrHgXnwdRA/leRVNCf9N7Xlfhf4ySSH\nV9U9wG8Dn2y7aw4DPrOd48w7gJzkoCTfmfeDzZjAS4Ffohl3uB04kqbVdGlbZhPN+MsXgCuAL8/Z\nzTE04ynntl1xG4F9223PAP45yd3A2cAHRgbjj6cZUL8jye92fJfDaabd3gScBhxbVWcxv4X+Ld9M\n0xK6qY3jb6rqIwuU1wqRIa9pSnIQcA9wSlU9aJCr/Qvu6Kp6eZLnA39aVQcOFpA0RUl+gqZr6Yiq\n+vy045G2Z9AWRFV9hWawbj6H0vwlSVV9Fdg1yROHjEmalqr6JvCLNFNC7d7VsrfDlI+/B8087q1u\nbNfdMp1wpGG13U5zp6NKy5J/xUiSOk27BXEj8JSR5T2ZZ6pdEqfOSdIiVNWipnJPogWx0Nz202mv\n3kxyIHBXVc3bvVRVvqo47rjjph7DcnlZF9aFdbHw66EYtAWR5KPADPDYJNfRzPHekWaK94lV9dkk\nL0tyJc00udcPGY8kqb9BE0RVHdGjzNFDxiBJWhwHqVegmZmZaYewbFgX21gX21gXS2PQC+WWUpJa\nKbFK0nKRhFrGg9SSpBXIBCFJ6mSCkCR1MkFIkjqZICRJnUwQkqROJghJUicThCSpkwlCktTJBCFJ\n6mSCkCR1MkFIkjqZICRJnUwQkqROJghJUicThCSpkwlCktTJBCFJ6mSCkCR1MkFIkjqZICRJnUwQ\nkqROJghJUicThCSpkwlCktTJBCFJ6mSCkCR1MkFIkjqZICRJnUwQkqROJghJUicThCSpkwlCktTJ\nBCFJ6jR4gkiyPsllSa5IckzH9l2SnJ7kgiQXJ/m1oWOSJG1fqmq4nSdrgCuAFwE3AecDh1XVZSNl\n3gHsUlXvSPI44HLgiVX1wzn7qiFjlaTVKAlVlcV8dugWxAHApqq6tqo2A6cCh84pU8DO7fudgdvn\nJgdJ0uQNnSD2AK4fWb6hXTfq/cAzk9wEXAi8ZeCYJEk97DDtAICXAt+oqoOTPA34fJJ1VXXP3IIb\nNmy4//3MzAwzMzMTC1KSVoLZ2VlmZ2eXZF9Dj0EcCGyoqvXt8tuBqqoTRsr8A3B8VZ3dLn8BOKaq\nvjZnX45BSNKYlvMYxPnA05PsnWRH4DDg9DllrgVeDJDkicC+wNUDxyVJ2o5Bu5iqakuSo4GNNMno\npKq6NMlRzeY6EXgX8JEkF7Ufe1tV3TFkXJKk7Ru0i2kp2cUkSeNbzl1MkqQVygQhSepkgpAkdTJB\nSJI6mSAkSZ1MEJKkTiYISVInE4QkqZMJQpLUabsJIslb2qe+JclJSf41yUsmEZwkaXr6tCD+e1V9\nB3gJsBtwJPCeQaOSJE1dnwSx9R4eLwP+uqq+NbJOkrRK9UkQX0+ykSZBfC7JzsB9w4YlSZq27d7N\nNcka4DnA1VV1V5LHAntU1UULfnCJeTdXSRrfQ7mb63afB1FV9yW5hea50cvhEaWSpAnY7gk/yQnA\na4BLgC3t6gK+NGBckqQp69PFdDmwrqp+MJmQ5o3DLiZJGtPQDwy6GviRxexckrRy9RlT+C5wQZIv\nAPe3IqrqtweLSpI0dX0SxOntS5L0MLLdMQiAJDsC+7aLl1fV5kGj6o7BMQhJGtOg01yTzAB/Bfwb\nzRXUT0nyuqpyFpMkrWJ9ZjF9HTiiqi5vl/cFPlZVPzWB+EbjsAUhSWMaehbTj2xNDgBVdQXOapKk\nVa/PIPXXknwY+Jt2+VeBrw0XkiRpOejTxfRI4LeAg9pVXwY+OOkL5+xikqTxPZQupl6zmJYDE4Qk\njW+QWUxJPlFVv5LkYpp7Lz1AVa1bzAElSSvDvC2IJLtX1c1J9u7aXlXXDhrZg+OxBSFJYxpkFlNV\n3dy+fVNVXTv6At60mINJklaOPtNcf6Fj3SFLHYgkaXlZaAziN2laCvskGX163M7A2UMHJkmaroXG\nIHYFdgOOB94+sunuqrpjArHNjccxCEka00SmuSZ5AvCorctVdd1iDrhYJghJGt+gt9pI8sokm4Br\ngC/S3LTvzMUcTJK0cvQZpH4XcCBwRVU9FXgRcG7fAyRZn+SyJFckOWaeMjNJvpHkm0nO6rtvSdJw\n+iSIzVV1O7AmyZqqOgt4Xp+dJ1kDvB94KfAs4PAk+80psyvwAeAVVfUTwC+P8wUkScPoc7O+u5Ls\nBHwJ+NsktwL39tz/AcCmrRfVJTkVOBS4bKTMEcBpVXUjQFXd1jd4SdJw+rQgDqV5LvXvAP8EXAW8\nsuf+9wCuH1m+oV03al9gbZKzkpyf5Mie+5YkDahPC+Io4OPtX/h/NVAMzwUOBn4MOCfJOVV15QDH\nkiT11CdB7AxsTHIH8HHgk1V1S8/93wjsNbK8Z7tu1A3AbVX1feD7Sb4E7A88KEFs2LDh/vczMzPM\nzMz0DEOSHh5mZ2eZnZ1dkn2Ncx3EOuA1wC8BN1TVi3t85hHA5TQzn24GzgMOr6pLR8rsB/wZsB54\nJPBV4DVVdcmcfXkdhCSNaZDbfXe4Ffh34HbgCX0+UFVbkhwNbKQZ7zipqi5NclSzuU6sqsuSfA64\nCNgCnDg3OUiSJq/PE+XeBPwK8Hjgk8AnpnECtwUhSeMbugWxJ/A/quqCxRxAkrQyLdiCaMcQvlVV\n+81baEJsQUjS+Aa7F1NVbQEuT7LXQuUkSatPny6m3YBvJTmPkSuoq+pVg0UlSZq6Pgni2MGjkCQt\nO72ug0iyN/CMqvrnJI8GHlFVdw8e3QNjcAxCksY09PMgfgP4FPChdtUewKcXczBJ0srR52Z9vwX8\nLPAdgKraRM8L5SRJK1efBPGDqvqPrQtJdgDs65GkVa5Pgvhikt8DfjTJL9BcTX3GsGFJkqatz602\n1gBvAF4CBPgc8OFJjxg7SC1J43sog9S97+baHmgtsGdVXbSYgz0UJghJGt/Qs5hmk+zSJoevA3+Z\n5E8WczBJ0srRZwxi16r6DvBq4JSqej7N8x0kSatYnwSxQ5LdaW75/Q8DxyNJWib6JIh30gxMX1VV\n5yfZB9g0bFiSpGkba5B6mhyklqTxDT1IvU+SM5L8vyS3JvlM24qQJK1ifbqYPgp8AtgdeDLNhXIf\nGzIoSdL09blQ7qKqWjdn3YVVtf+gkT04DruYJGlMgzyTur3uAeDMJG8HTqW5B9NrgM8u5mCSpJVj\n3hZEkmtoEkJX5qmqmug4hC0ISRrfxG61MU0mCEka3yBdTO2On0DzPIhntau+BXygqm5dzMEkSSvH\nvLOYkvwscH67eEr7Ajiv3SZJWsUWGoM4F/jNqvrGnPXPAT7U3pNpYuxikqTxDXWh3C5zkwNAVV0A\n7LyYg0mSVo6FEkSS7Naxcu12PidJWgUWOtH/CbAxyQuT7Ny+ZoAz222SpFVswWmuSV4BvI1mFlMB\nlwB/WFUTfya1YxCSND6vg5AkdRr0bq6SpIcnE4QkqVOf50E8tc86SdLq0qcFcVrHuk8tdSCSpOVl\nodt970cze2nXJK8e2bQL8KihA5MkTddCLYgfB14BPAZ45cjrucBv9D1AkvVJLktyRZJjFij300k2\nz0lGkqQp6fNEuRdU1TmL2nmyBrgCeBFwE83N/w6rqss6yn0e+B7wf6rq7zr25TRXSRrT0NNcr0/y\n90lubV+nJdmz5/4PADZV1bVVtZnmqXSHdpR7M824hrcRl6Rlok+COBk4HXhy+zqjXdfHHsD1I8s3\ntOvul+TJwC9W1Z/T/fQ6SdIU9EkQT6iqk6vqh+3rI8DjlzCG9wKjYxMmCUlaBhZ8olzrtiT/DfhY\nu3w4cHvP/d8I7DWyvGe7btTzgFOTBHgccEiSzVV1+tydbdiw4f73MzMzzMzM9AxDkh4eZmdnmZ2d\nXZJ99Rmk3hv4M+AF7aqzgd+uquu2u/PkEcDlNIPUNwPnAYdX1aXzlD8ZOMNBaklaGoM9kxqgqq4F\nXrWYnVfVliRHAxtpurNOqqpLkxzVbK4T535kMceRJC29Pi2IfYA/BQ6kOYGfA/xOVV09fHgPiMMW\nhCSNaehprh8FPgHsTjOL6ZNsG4+QJK1SfVoQF1XVujnrLqyq/QeN7MFx2IKQpDEN+sCgJCcAd9Jc\n5FbAa4DdgD8EqKo7FnPgcZkgJGl8QyeIaxbYXFW1z2IOPC4ThCSNz0eOSpI6DTpIneSXk+zcvv/9\nJH+X5CcXczBJ0srRZxbTsVV1d5KDgBcDJwF/MWxYkqRp65MgtrQ/Xw6cWFX/COw4XEiSpOWgT4K4\nMcmHaGYvfTbJI3t+TpK0gvWZxfRoYD1wcVVtSrI78Oyq2jiJAEficJBaksY0+Cym9qZ7T2Tk3k19\nbta3lEwQkjS+QW/Wl+TNwHHALcB97eoC1s37IUnSiteni+lK4PlV1fcZEIOwBSFJ4xv8mdTAtxez\nc0nSytXniXJXA7NJ/hH4wdaVVfXHg0UlSZq6Pgniuva1I17/IEkPG96LSZJWsaFnMZ1Fx6NAq+rg\nxRxQkrQy9OlieuvI+0cBvwT8cJhwJEnLxaK6mJKcV1UHDBDPQse0i0mSxjR0F9PakcU1wE8Buy7m\nYJKklaNPF9PXacYgQtO1dA3whiGDkiRNn7OYJGkVG+RK6iQ/neRJI8uvTfKZJO+b0+0kSVqFFrrV\nxoeA/wBI8nPAe4BTaG67ceLwoUmSpmmhMYhHVNUd7fvX0DxN7jTgtCQXDB+aJGmaFmpBPCLJ1gTy\nIuD/jmzrM7gtSVrBFjrRfwz4YpLbgO8BXwZI8nS8u6skrXoLzmJKciCwO7Cxqu5t1+0L7FRV/zqZ\nEO+PxVlMkjSmwR85uhyYICRpfEM/MEiS9DBkgpAkdTJBSJI6mSAkSZ1MEJKkTiYISVKnwRNEkvVJ\nLktyRZJjOrYfkeTC9vWVJM8eOiZJ0vYNeh1EkjXAFTS36rgJOB84rKouGylzIHBpVX07yXpgQ1Ud\n2LEvr4OQpDEt5+sgDgA2VdW1VbUZOBU4dLRAVZ1bVVtv3XEusMfAMUmSehg6QewBXD+yfAMLJ4Bf\nB84cNCJJUi/L5q6sSX4eeD1w0HxlNmzYcP/7mZkZZmZmBo9LklaS2dlZZmdnl2RfQ49BHEgzprC+\nXX47UFV1wpxy64DTgPVVddU8+3IMQpLGtJzHIM4Hnp5k7yQ7AocBp48WSLIXTXI4cr7kIEmavEG7\nmKpqS5KjgY00yeikqro0yVHN5joROBZYC3wwSYDNVXXAkHFJkrbP231L0iq2nLuYJEkrlAlCktTJ\nBCFJ6mSCkCR1MkFIkjqZICRJnUwQkqROJghJUicThCSpkwlCktTJBCFJ6mSCkCR1MkFIkjqZICRJ\nnUwQkqROJghJUicThCSpkwlCktTJBCFJ6mSCkCR1MkFIkjqZICRJnUwQkqROJghJUicThCSpkwlC\nktTJBCFJ6mSCkCR1MkFIkjqZICRJnUwQkqROJghJUicThCSpkwlCktTJBCFJ6jR4gkiyPsllSa5I\ncsw8Zd6XZFOSC5I8Z+iYJEnbN2iCSLIGeD/wUuBZwOFJ9ptT5hDgaVX1DOAo4C+GjGk1mJ2dnXYI\ny4Z1sY11sY11sTSGbkEcAGyqqmurajNwKnDonDKHAqcAVNVXgV2TPHHguFY0//NvY11sY11sY10s\njaETxB7A9SPLN7TrFipzY0cZSdKEOUgtSeqUqhpu58mBwIaqWt8uvx2oqjphpMxfAGdV1cfb5cuA\nF1bVLXP2NVygkrSKVVUW87kdljqQOc4Hnp5kb+Bm4DDg8DllTgd+C/h4m1DumpscYPFfUJK0OIMm\niKrakuRoYCNNd9ZJVXVpkqOazXViVX02ycuSXAncC7x+yJgkSf0M2sUkSVq5lt0gtRfWbbO9ukhy\nRJIL29dXkjx7GnFOQp//F225n06yOcmrJxnfJPX8HZlJ8o0k30xy1qRjnJQevyO7JDm9PVdcnOTX\nphDm4JKclOSWJBctUGb882ZVLZsXTcK6Etgb+BHgAmC/OWUOAf6xff984Nxpxz3FujgQ2LV9v/7h\nXBcj5b4A/APw6mnHPcX/F7sC3wL2aJcfN+24p1gX7wCO31oPwO3ADtOOfYC6OAh4DnDRPNsXdd5c\nbi0IL6zbZrt1UVXnVtW328VzWb3Xj/T5fwHwZuBTwK2TDG7C+tTFEcBpVXUjQFXdNuEYJ6VPXRSw\nc/t+Z+D2qvrhBGOciKr6CnDnAkUWdd5cbgnCC+u26VMXo34dOHPQiKZnu3WR5MnAL1bVnwOrecZb\nn/8X+wJrk5yV5PwkR04susnqUxfvB56Z5CbgQuAtE4ptuVnUeXPoaa6agCQ/TzP766BpxzJF7wVG\n+6BXc5LYnh2A5wIHAz8GnJPknKq6crphTcVLgW9U1cFJngZ8Psm6qrpn2oGtBMstQdwI7DWyvGe7\nbm6Zp2ynzGrQpy5Isg44EVhfVQs1MVeyPnXxPODUJKHpaz4kyeaqOn1CMU5Kn7q4Abitqr4PfD/J\nl4D9afrrV5M+dfF64HiAqroqyTXAfsDXJhLh8rGo8+Zy62K6/8K6JDvSXFg39xf8dOC1cP+V2p0X\n1q0C262LJHsBpwFHVtVVU4hxUrZbF1W1T/t6Ks04xJtWYXKAfr8jnwEOSvKIJI+mGZS8dMJxTkKf\nurgWeDFA2+e+L3D1RKOcnDB/y3lR581l1YIoL6y7X5+6AI4F1gIfbP9y3lxVB0wv6mH0rIsHfGTi\nQU5Iz9+Ry5J8DrgI2AKcWFWXTDHsQfT8f/Eu4CMj0z/fVlV3TCnkwST5KDADPDbJdcBxwI48xPOm\nF8pJkjotty4mSdIyYYKQJHUyQUiSOpkgJEmdTBCSpE4mCElSp2V1HYS0HCRZS3NX2AJ2p7mW4Faa\ni5DuraqH8y1N9DDidRDSApL8AXBPVf3xtGORJs0uJmlhD7h1QZK7258vTDKb5NNJrkxyfPsAp6+2\nD3B6alvucUk+1a7/apKfmcaXkBbDBCGNZ7TJvQ54I/BM4EjgGVX1fOAkmmdTAPwp8Mft+v8KfHiC\nsUoPiWMQ0uKdX1W3AiS5iuaeQAAX09wXB5obxf3n9l5ZADsleXRVfXeikUqLYIKQFu8HI+/vG1m+\nj22/WwGe3z7xTFpR7GKSxjPug4g2MvIUsyT7L2040nBMENJ45pv2N9/6twDPaweuvwkcNUxY0tJz\nmqskqZMtCElSJxOEJKmTCUKS1MkEIUnqZIKQJHUyQUiSOpkgJEmdTBCSpE7/H4Yij7yVXy24AAAA\nAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f93d978cbe0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import struct\n",
+    "\n",
+    "# opening the file as binary\n",
+    "file = open('ISSN_D_tot.csv', 'rb')\n",
+    "data = file.read()\n",
+    "data_sunspots = struct.unpack(\"f\" * ((len(data) - 12) // 4), data[12:])\n",
+    "file.close()\n",
+    "\n",
+    "data_sunspots = np.array(data_sunspots)\n",
+    "\n",
+    "\n",
+    "plt.xlabel('Time')\n",
+    "plt.ylabel('Sunspot Observations')\n",
+    "plt.title('Final Exam: Question 6')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
+   "source": []
   }
  ],
  "metadata": {
